--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@ashthornton/asscroll": "^2.0.11",
+    "events": "^3.3.0",
     "gsap": "^3.12.1",
     "lil-gui": "^0.18.2",
     "three": "^0.153.0",
